<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="0.4"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/version_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_version_Title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version_Value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_version_Summary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/gravity_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gravity_Title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/gravity_seekBar"
            style="@android:style/Widget.Material.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="500" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="start"
                android:text="@string/gravity_start_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:text="@string/gravity_end_text" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/shake_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shake_Title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/shake_seekBar"
            style="@android:style/Widget.Material.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="500" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="start"
                android:text="@string/shake_start_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:text="@string/shake_end_text" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/reset_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_Title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/reset_seekBar"
            style="@android:style/Widget.Material.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="2000" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="start"
                android:text="@string/reset_start_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:text="@string/reset_end_text" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/countdown_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/countdown_Title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/countdown_seekBar"
            style="@android:style/Widget.Material.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5000" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="start"
                android:text="@string/countdown_start_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:text="@string/countdown_end_text" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:width="150dp"
            android:text="@string/btnSave" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:width="150dp"
            android:text="@string/btnReset" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>