<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <petelap.shakephoto.AutoFitTextureView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="25dp">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/button"
                android:layout_width="@dimen/progressFab_dimen"
                android:layout_height="@dimen/progressFab_dimen"
                android:layout_gravity="center"
                android:alpha=".5"
                app:backgroundTint="@color/colorPrimary" />

            <TextView
                android:id="@+id/btnText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="14dp"
                android:text="@string/photo_Take"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <petelap.shakephoto.CircleProgressBar
                android:id="@+id/custom_progressBar"
                android:layout_width="@dimen/progressBar_dimen"
                android:layout_height="@dimen/progressBar_dimen"
                android:layout_gravity="center"
                app:progress="0"
                app:progressBarThickness="10dp" />
        </FrameLayout>

        <ImageButton
            android:id="@+id/btnNavSettings"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/action_settings"
            app:srcCompat="@drawable/twotone_settings_applications_white_36" />

        <!--<ImageButton-->
            <!--android:id="@+id/btnRes"-->
            <!--style="@style/Widget.AppCompat.ImageButton"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="top|center"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:contentDescription="@string/action_settings"-->
            <!--app:srcCompat="@drawable/twotone_photo_size_select_actual_white_36" />-->

        <ImageButton
            android:id="@+id/btnSwitchCamera"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/switch_camera"
            app:srcCompat="@drawable/twotone_switch_camera_white_36" />

    </FrameLayout>

</RelativeLayout >